Prevent timer value resets when selecting jobs on UI

When the user selects a job from the list, the slider's setMaximum
function is called after its valueChanged signal has been connected to
the job's setValue method.

setMaximum can change the slider's value to be within the new range thus
causing it to emit the valueChanged signal and so setting the job's
value to it's maximum.

This change moves the setMaximum call (and a bunch of other value
setting calls) to before the signals are connected up.

BUG: 471518